--- a/punto-1-2-3/page-structur.css
+++ b/punto-1-2-3/page-structur.css
@@ -1,4 +1,4 @@
-a {
+/* a {
     color: indianred;
 }
 
@@ -19,15 +19,15 @@ span {
     font-size: 28px;
     font-weight: 200;
 }
-#sectin-1 {
-    background-color: #2ec172;
+#section-1 {
+    background: linear-gradient(#14dcee, #fff);
     color: white;
 }
-#sectin-2 {
+#section-2 {
 color: #888;
 }
 
 footer {
     background-color: #333;
     color: #ffffffbb;
-}
+} */
